[package]
name = "crypto-rust-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
dotenv = "0.15.0"
log = "0.4.20"
mockall = "0.12.1"
rand = "0.8.5"
reqwest = "0.11.23"
secp256k1 = "0.28.1"
serde = "1.0.195"
sha2 = "0.10.8"
sled = "0.34.7"
thiserror = "1.0.56"
tokio = "1.35.1"
tokio-tungstenite = "0.21.0"
